WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211590
Web Inspector: Unable to Show JavaScript Console in empty tab in Safari Technology Preview
https://bugs.webkit.org/show_bug.cgi?id=211590
Summary
Web Inspector: Unable to Show JavaScript Console in empty tab in Safari Techn...
Jeff Johnson
Reported
2020-05-07 12:49:39 PDT
I'm using Safari Technology Preview Release 105 (Safari 13.2, WebKit 14610.1.10) on macOS 10.14.6. This bug does not occur with Safari Version 13.1 (14609.1.20.111.8) on the same system. Steps to reproduce: 1) Launch STP 2) Press option-command-c to Show JavaScript Console. Expected results: Web Inspector opens to Console. Actual results: Nothing happens. Notes: The keyboard shortcut option-command-i to Show Web Inspector *does* work on an empty tab. However, option-command-a to Show Page Resources also fails, along with Show JavaScript Console. Option-command-u to Show Page Source... that crashes reproducibly in -[_WKInspector showMainResourceForFrame:], I just discovered. That could be another bug, I suppose, but I was already filing this one. I believe this issue is related to
https://bugs.webkit.org/show_bug.cgi?id=209628
and
https://bugs.webkit.org/show_bug.cgi?id=209639
Bizarrely, if you try option-command-c first, which fails, and then try option-command-i, the Web Inspector opens in a big empty white window the size of the screen.
Attachments
Patch
(2.62 KB, patch)
2020-11-19 16:20 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-05-07 17:33:17 PDT
<
rdar://problem/63000159
>
Simon Fraser (smfr)
Comment 2
2020-11-19 13:01:40 PST
Chris, is this because we haven't fired up a WebContent process yet?
Chris Dumez
Comment 3
2020-11-19 13:05:40 PST
(In reply to Simon Fraser (smfr) from
comment #2
)
> Chris, is this because we haven't fired up a WebContent process yet?
Yes, but this is an old issue and this has been fixed in Safari 14 AFAIK. I am unable to reproduce on Safari 14.
Chris Dumez
Comment 4
2020-11-19 13:06:25 PST
Please verify that this is fixed in Safari 14 (or latest STP).
Jeff Johnson
Comment 5
2020-11-19 14:42:07 PST
It's not fixed in Safari 14 or STP 116 released today. Additional step to reproduce: Preferences, General, New Windows open with Empty Page, New Tabs open with Empty Page.
Simon Fraser (smfr)
Comment 6
2020-11-19 15:10:38 PST
I can reproduce. Chris, you have to do "Show JavaScript Console" from the Develop menu without first opening the inspector.
Chris Dumez
Comment 7
2020-11-19 15:15:13 PST
(In reply to Simon Fraser (smfr) from
comment #6
)
> I can reproduce. > > Chris, you have to do "Show JavaScript Console" from the Develop menu > without first opening the inspector.
Oh, I can now too. Maybe I had done something that had launched the process already when I tested earlier. I will investigate.
Chris Dumez
Comment 8
2020-11-19 16:20:08 PST
Created
attachment 414633
[details]
Patch
EWS
Comment 9
2020-11-19 17:05:30 PST
Committed
r270060
: <
https://trac.webkit.org/changeset/270060
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414633
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug